# Solidbits

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  bitops.c  config.h.in  configure  configure.ac  file.c  helper.c  job.c  main.c  net.c  net.h  parser.c  solidbits.h  worker.c
clients/php7/: solidbits.php
clients/python/: example.py  solidbits.py
src/: Makefile.am  Makefile.in  solidbits.h
test/: common.py  run.sh  test_basic.py  test_bitcount.py  test_bitop.py  test_parser.py
